--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ torch-scatter==latest+cu101
 torch-sparse==latest+cu101
 torch-cluster==latest+cu101
 torch-spline-conv==latest+cu101
-git+https://github.com/rusty1s/pytorch_geometric.git
+torch-geometric
 networkx
 numpy
 pandas
