--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
 --find-links https://download.pytorch.org/whl/torch_stable.html
---find-links https://pytorch-geometric.com/whl/torch-1.7.0.html
-torch==1.7.0+cu101
-torchvision==0.8.1+cu101
-torchaudio==0.7.0
-torch-scatter==latest+cu101
-torch-sparse==latest+cu101
-torch-cluster==latest+cu101
-torch-spline-conv==latest+cu101
+--find-links https://pytorch-geometric.com/whl/torch-1.8.0+cu102.html
+torch==1.8.0
+torchvision==0.9.0
+torchaudio==0.8.0
+torch-scatter
+torch-sparse
+torch-cluster
+torch-spline-conv
 torch-geometric
 networkx
+matplotlib
 numpy
 pandas
 scikit-learn
@@ -16,4 +17,4 @@ skorch
 tqdm
 fire
 numpydoc
-ogb
+pygsp
