--- a/conda/environment_cu101.yml
+++ b/conda/environment_cu101.yml
@@ -2,29 +2,17 @@ name: kmis
 channels:
   - pytorch
   - conda-forge
+  - pyg
 dependencies:
   - python=3.8
   - cudatoolkit=10.1
+  - pytorch=1.8.1
+  - torchvision=0.9.1
+  - torchaudio=0.8.1
+  - pytorch-lightning=1.4
+  - ray-tune
+  - pyg
   - scikit-learn
   - setuptools=59.5.0
   - numpy
   - pandas
-  - fire
-  - matplotlib
-  - seaborn
-  - networkx
-  - tqdm
-  - h5py
-  - pip
-  - pip:
-    - -f https://download.pytorch.org/whl/torch_stable.html
-    - -f https://data.pyg.org/whl/torch-1.8.1+cu101.html
-    - torch==1.8.1+cu101
-    - torchvision==0.9.1+cu101
-    - torchaudio==0.8.1
-    - torch-sparse
-    - torch-scatter
-    - torch-cluster
-    - torch-geometric
-    - pytorch-lightning==1.4
-    - "ray[tune]"
