--- a/conda/environment_cpu.yml
+++ b/conda/environment_cpu.yml
@@ -6,11 +6,10 @@ channels:
 dependencies:
   - python=3.8
   - cpuonly
-  - pytorch=1.8.1
-  - torchvision=0.9.1
-  - torchaudio=0.8.1
-  - pytorch-lightning=1.4
-  - setuptools=59.5.0
+  - pytorch=1.11.0
+  - torchvision=0.12.0
+  - torchaudio=0.11.0
+  - pytorch-lightning
   - ray-tune
   - pyg
   - scikit-learn
@@ -24,4 +23,4 @@ dependencies:
   - h5py
   - pip
   - pip:
-      - torch-geometric==2.0.3
+    - git+https://github.com/pyg-team/pytorch_geometric.git
